fixed title misalignment

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -178,7 +178,7 @@ ol, ul {
 }
 
 .game-header h2 {
-  font: 100px "Brush Script";
+  font: 8vw "Brush Script";
   color:rgb(85, 61, 61);
   font-weight: bold;
   text-align: center;
